# rust-hqm-bot

./: Cargo.toml
src/: hqm_bot.rs  hqm_game.rs  hqm_parse.rs  main.rs
