[package]
name = "rust-hqm-bot"
version = "0.1.0"
authors = ["John Eriksson <john.eriksson.16@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.24"
tokio = { version = "1.0.2", features = ["net", "time", "macros", "rt-multi-thread", "sync", "fs"] }
bytes = "1.0"

[profile.dev]
opt-level = 2

[profile.release]
opt-level = 3